# Graduation-Design

./: .gitignore  1.py  README.md  README_项目完全指南.md  channel_analysis.py  eeg_analysis.ipynb  eeg_analysis.py  eeg_exploration.py  eeg_preprocessing.py  eeg_process_pipeline.py  pyproject.toml  test.py  中期报告_二_EEG信号预处理过程.md  中期答辩大纲.md  中期答辩讲解词.md  多被试数据处理方案.md
.trae/documents/: EEG 信号滤波详解与实现计划.md
code/: FBCSP_实施总结.md  FBCSP_性能优化总结.md  README.md  __init__.py  _plot_config.py  batch_preprocess.py  batch_processing.py  config.py  evaluate.py  general_process.py  test_on_evaluation_set.py  train.py
code/classification/: __init__.py  classifier_comparison.py  svm_classifier.py  修复总结.md
code/feature_extraction/: __init__.py  csp_feature.py  eeg_transformers.py  wavelet_feature.py  修复总结.md
code/generate_img/: generate_ppt_images.py
code/pretreatment/: __init__.py  complete_preprocessing.py  (+1 more)
jupyter/: add_classifier_comparison.py  debug_eeg_data.ipynb  debug_eeg_data_v2_final.ipynb  general_process.ipynb  general_process_v2.ipynb  test.ipynb
temp/: test.py
周报/: 3-信通院本科毕业设计（论文）中期进展情况检查表 .docx  中期进展检查表_内容.md
知识补充/: BCIC_IV-2a 通道映射背景知识.md  BCIC_IV-2a 通道映射详解2.md  BCIC_IV_2a 数据集详解.md  CSP 与小波特征融合方法论.md  EEG 运动想象分类基础概念详解.md  EEG 运动想象分类复习总览.md  EEG 预处理中的 FIR 滤波器详解.md  EEG 预处理后期步骤详解：重参考、分段与伪迹试次剔除.md  EOG 通道在 ICA 中的参与机制详解.md  ICA 伪迹检测中的 threshold 参数详解.md  ICA 去除眼电伪迹：EOG 通道的重要性与使用指南.md  事件相关去同步化与同步化 ERD_ERS 详解.md  小波变换 db4 与分解层数详解.md  小波变换与能量特征提取方法论.md  电生理信号记录术语详解.md  评估流程及标签处理说明.md  选用原因.md  陷波滤波器详解.md  ？.md
进度规划/: EEG 预处理流程：滤波与 ICA 顺序详解.md  EEG 预处理进度与规划.md
(+3 files in other folders)
