[project]
name = "eeg-graduation-design"
version = "0.1.0"
description = "EEG Motor Imagery Classification - Graduation Design Project"
requires-python = ">=3.11"
dependencies = [
    "mne>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "pywavelets>=1.4.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
